--- a/login.css
+++ b/login.css
@@ -74,9 +74,6 @@
 }
 
 .credential-box button {
-    margin-top: 30px;
-    width: 100%;
-    height: 45px;
     background: hsla(145, 84%, 73%, 1);
 
     background: radial-gradient(circle, hsla(145, 84%, 73%, 1) 0%, hsla(150, 61%, 48%, 1) 100%);
@@ -86,6 +83,11 @@
     background: -webkit-radial-gradient(circle, hsla(145, 84%, 73%, 1) 0%, hsla(150, 61%, 48%, 1) 100%);
 
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr="#82F4B1", endColorstr="#30C67C", GradientType=1);
+
+    margin-top: 30px;
+    width: 100%;
+    height: 45px;
+    font-size: medium;
 }
 
 .credential-box div {
