--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 [data-theme="dark"] {
-    --bg-color-1: #352F44;
+    --bg-color-1: #a59bbe;
     --bg-color-2: #5C5470;
     --bg-color-3: #B9B4C7;
     --bg-color-4: #FAF0E6;
@@ -74,6 +74,15 @@ header h1 {
     background-color: var(--bg-color-2);
 }
 
+.nav-main li {
+    background-color: var(--bg-color-2);
+    margin: 10px;
+    padding: 7px;
+    list-style: none;
+    font-size: 24px;
+    color: var(--bg-color-4);
+}
+
 .navigation {
     padding: 12px;
 }
@@ -87,7 +96,8 @@ header h1 {
     color: var(--bg-color-4);
 }
 
-.navigation a {
+.navigation a,
+.nav-main a {
     text-decoration: none;
 }
 
@@ -104,14 +114,16 @@ hr {
 }
 
 .right {
-    padding: 20px;
+    padding: 30px;
+    display: grid;
+    gap: 20px;
     overflow-y: scroll;
 }
 
-/* OLD index.php (home page) book container css */
-/* .card {
+.card {
     background-color: var(--bg-color-3);
-    max-width: 200px;
+    max-width: 150px;
+    max-height: 250px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
@@ -127,13 +139,13 @@ hr {
     margin-bottom: 10px;
 }
 
-.book-image {
+.card .book-image {
     max-width: 100%;
+    max-height: 100%;
     height: auto;
-    margin-bottom: 10px;
 }
 
-.description {
+/* .description {
     font-size: 16px;
     line-height: 1.5;
 } */
@@ -194,7 +206,7 @@ hr {
 
     /*  */
     .divider .right {
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
     }
 }
 
@@ -226,10 +238,6 @@ hr {
     /*  */
     .divider .right {
         justify-content: center;
-        grid-template-columns: 1fr;
-    }
-
-    .card {
-        max-width: 300px;
+        grid-template-columns: repeat(2, 1fr);
     }
 }
